# student_hub

./: .coveragerc  .env.example  .gitignore  E2E_TEST_REPORT.md  FINAL_VERIFICATION_REPORT.md  FRONTEND_GUIDE.md  NODE4_INTEGRATION_COMPLETE.md  PHASE3_WEEK1_COMPLETE.md  QUICKSTART.md  README.md  STATUS.md  TDD_IMPLEMENTATION_SUMMARY.md  TDD_MASTER_PLAN.md  config.py  grpc_main.py  main.py  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  test_chat_request.json  test_chat_stream.json
api/: rest_server.py
app/: __init__.py  api_app.py  api_server.py  config.py  main.py
core/: intervention_engine.py  profile_aggregator.py  student_manager.py
docs/: COMPONENT_GUIDE.md  CONVERSATIONAL_SYSTEM_DESIGN.md  IMPLEMENTATION_STATUS.md  OPTION3_TDD_ROADMAP.md  PHASE4_COMPLETION_REPORT.md  SYSTEM_INDEX.md  USER_MANUAL.md  WEEK1_COMPLETION_REPORT.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
mcp_client/: manager.py
models/: schemas.py
protos/: common.proto  node0_mcp.proto  node2_qdna.proto  node4_labnode.proto  node7_errornote.proto  student_hub.proto  workflows.proto
reports/: TEST_REPORT.md  test_report.html
repositories/: postgres_repo.py  redis_client.py
scripts/: capture_screenshots.py  capture_student_detail.py  comprehensive_ui_test.py  create_simple_manual.py  create_user_manual_screenshots.py  debug_api_calls.py  debug_frontend.py  detailed_user_scenarios.py  e2e_browser_test.py  e2e_ui_interaction_test.py  e2e_usecase_scenarios.py  generate_proto.sh  generate_test_report.py  init_db.py  markdown_to_pdf.py  (+10 more)
(+137 files in other folders)
