[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "node0-student-hub"
version = "0.1.0"
description = "Student Hub - Central student management and learning tracking"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-reflection>=1.60.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "mcp>=1.0.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.1",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "grpcio-testing>=1.60.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.4",
]
dev = [
    "black",
    "isort",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "api*", "core*", "models*", "repositories*", "utils*", "workers*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --cov --cov-report=term-missing --cov-fail-under=100"
